--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -14,17 +14,41 @@
         android:orientation="vertical">
 
         <RelativeLayout
-          android:background="#fece2f"
-          android:layout_width="match_parent"
-          android:layout_height="300dp"
-          android:padding="30dp">
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:background="#fece2f"
+            android:padding="20dp">
 
-            <ImageView
-              android:id="@+id/editableProfileImageViewId"
-              android:layout_width="150dp"
-              android:layout_height="150dp"
-              android:src="@drawable/ic_baseline_account_circle_24"
-              android:layout_centerVertical="true"/>
+            <!--<ImageView
+                android:id="@+id/editableProfileImageViewId"
+                android:layout_width="144dp"
+                android:layout_height="148dp"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_baseline_account_circle_24" /> -->
+
+            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/editableProfileImageViewId"
+                android:layout_centerVertical="true"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                android:src="@drawable/profile"
+                app:civ_border_color="#FFFFFF"
+                app:civ_border_width="2dp" />
+
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/changeProfileImageId"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignRight="@+id/editableProfileImageViewId"
+                android:layout_alignBottom="@id/editableProfileImageViewId"
+                android:layout_marginEnd="24dp"
+                android:onClick="fabChangeProPic"
+                android:src="@drawable/ic_baseline_add_photo_alternate_24"
+                app:fabSize="mini" />
+
+
+
 
             <TextView
                 android:id="@+id/profileNameId"
@@ -52,10 +76,10 @@
                 android:textSize="16dp" />
 
             <RelativeLayout
-                android:layout_marginLeft="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/editableProfileImageViewId">
+                android:layout_below="@+id/editableProfileImageViewId"
+                android:layout_marginLeft="20dp">
 
                 <TextView
                     android:id="@+id/checkIsEmailVerifiedId"
