--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -16,7 +16,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            android:background="#fece2f"
+            android:background="#E6B923"
             android:padding="20dp">
 
             <!--<ImageView
@@ -109,7 +109,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="455dp"
+            android:layout_height="match_parent"
             android:background="#E6B923"
             android:orientation="vertical">
 
@@ -158,6 +158,79 @@
                 android:textStyle="bold" />
 
 
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:background="#E6B923"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="5dp"
+                android:layout_gravity="center_horizontal"
+                android:text="  Choose Front Side of Your\nNID Card or Student ID Card"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:textStyle="italic"
+                android:textColor="@color/black"/>
+
+            <ImageView
+                android:layout_marginBottom="5dp"
+                android:id="@+id/frontImageId"
+                android:src="@drawable/ic_baseline_image_24"
+                android:layout_width="match_parent"
+                android:scaleType="fitXY"
+                android:layout_height="200dp"/>
+
+            <Button
+                android:padding="10dp"
+                android:layout_margin="15dp"
+                android:textStyle="bold"
+                android:onClick="uploadFrontImageBtn"
+                android:text="Upload Image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:background="#E6B923"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="5dp"
+                android:layout_gravity="center_horizontal"
+                android:text="  Choose Back Side of Your\nNID Card or Student ID Card"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:textStyle="italic"
+                android:textColor="@color/black"/>
+
+            <ImageView
+                android:layout_marginBottom="5dp"
+                android:id="@+id/backImageId"
+                android:src="@drawable/ic_baseline_image_24"
+                android:layout_width="match_parent"
+                android:scaleType="fitXY"
+                android:layout_height="200dp"/>
+
+            <Button
+                android:padding="10dp"
+                android:layout_margin="15dp"
+                android:textStyle="bold"
+                android:onClick="uploadBackImageBtn"
+                android:text="Upload Image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
 
         </LinearLayout>
