--- a/app/src/main/res/layout/recycler_my_post_row_item.xml
+++ b/app/src/main/res/layout/recycler_my_post_row_item.xml
@@ -29,7 +29,7 @@
                 android:background="#E3EFDE"
                 android:gravity="center"
                 android:padding="5dp"
-                android:text="Post Status: Pending"
+                android:text="Post Status "
                 android:textColor="@color/black"
                 android:textSize="17sp"
                 android:textStyle="bold" />
