--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -25,6 +25,12 @@
         android:padding="30dp"
         android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/mapAddressId"
+                android:text="Address from Map"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
         <com.google.android.material.textfield.TextInputLayout
             android:background="@color/background"
             android:layout_width="match_parent"
