--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -1,127 +1,271 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PostActivity">
 
-    <fragment
-        android:id="@+id/googleMapId"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"/>
-
-
-    <ScrollView
-        android:layout_below="@+id/googleMapId"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarMapLayoutId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-
-        <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="30dp"
-        android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/mapAddressId"
-                android:text="Address from Map"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:background="@color/background"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:boxBackgroundMode="outline"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-
-            <Spinner
-                android:layout_marginBottom="20dp"
-                android:padding="10dp"
-                android:layout_gravity="center"
-                android:id="@+id/locationSpinnerId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-
-            </Spinner>
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            app:startIconDrawable="@drawable/ic_baseline_date_range_24"
-            android:hint="Select Date"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:boxBackgroundMode="outline"
-            app:endIconMode="clear_text"
-            android:layout_margin="10dp"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-
-            <EditText
-                android:inputType="text"
-                android:id="@+id/selectDateId"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:weightSum="2"
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:contentScrim="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+                <fragment
+                    android:layout_margin="10dp"
+                    android:id="@+id/googleMapId"
+                    app:layout_collapseMode="parallax"
+                    android:name="com.google.android.gms.maps.SupportMapFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"/>
+
+            <androidx.appcompat.widget.Toolbar
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin"
+                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
+
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+
+
+
+    <androidx.core.widget.NestedScrollView
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="vertical">
+
+            <androidx.cardview.widget.CardView
+                app:cardCornerRadius="10dp"
+                android:layout_marginBottom="10dp"
+                app:cardBackgroundColor="#FBFBFB"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:padding="5dp"
+                    android:gravity="center"
+                    android:textSize="17sp"
+                    android:textColor="@color/black"
+                    android:id="@+id/mapAddressId"
+                    android:text="Address from Map"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+
+            </androidx.cardview.widget.CardView>
+
+
             <com.google.android.material.textfield.TextInputLayout
-                app:startIconDrawable="@drawable/ic_baseline_house_siding_24"
-                android:layout_weight="1"
+                android:id="@+id/locationTextInputLayoutId"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:boxBackgroundMode="outline"
-                android:hint="Home or Building Name"
-                app:counterEnabled="true"
-                app:counterMaxLength="30"
-                app:endIconMode="clear_text"
-                android:layout_margin="10dp"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+                android:hint=" Hostel Location / Address"
+                app:endIconMode="dropdown_menu"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
 
-                <EditText
-                    android:inputType="text"
-                    android:id="@+id/buildingNameId"
+                <AutoCompleteTextView
+                    android:id="@+id/dropDownTextId"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    />
+                    android:layout_height="wrap_content"/>
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
-                app:startIconDrawable="@drawable/ic_baseline_cabin_24"
-                android:layout_weight="1"
+            <LinearLayout
+                android:orientation="horizontal"
+                android:weightSum="2"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:boxBackgroundMode="outline"
-                android:hint="Floor Number"
-                app:counterEnabled="true"
-                app:counterMaxLength="30"
-                app:endIconMode="clear_text"
-                android:layout_margin="10dp"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+                android:layout_height="wrap_content">
 
-                <EditText
-                    android:inputType="text"
-                    android:id="@+id/floorNumberId"
+                <com.google.android.material.textfield.TextInputLayout
+                    app:startIconDrawable="@drawable/ic_baseline_house_siding_24"
+                    android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    />
+                    app:boxBackgroundMode="outline"
+                    android:hint="Home or Building Name"
+                    app:counterEnabled="true"
+                    android:layout_marginRight="5dp"
+                    app:counterMaxLength="30"
+                    app:endIconMode="clear_text"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-            </com.google.android.material.textfield.TextInputLayout>
+                    <EditText
+                        android:inputType="text"
+                        android:id="@+id/buildingNameId"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    app:startIconDrawable="@drawable/ic_baseline_cabin_24"
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:boxBackgroundMode="outline"
+                    android:hint="Floor Number"
+                    app:counterEnabled="true"
+                    app:counterMaxLength="30"
+                    app:endIconMode="clear_text"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+                    <EditText
+                        android:inputType="text"
+                        android:id="@+id/floorNumberId"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        />
+
+                </com.google.android.material.textfield.TextInputLayout>
 
 
-        </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:weightSum="2"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_marginRight="5dp"
+                    android:layout_weight="1"
+                    android:id="@+id/selectMonthId"
+                    app:startIconDrawable="@drawable/ic_baseline_date_range_24"
+                    android:hint="Select Month "
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:boxBackgroundMode="outline"
+                    app:endIconMode="dropdown_menu"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
+
+                    <AutoCompleteTextView
+                        android:id="@+id/selectMonthTextId"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_weight="1"
+                    app:startIconDrawable="@drawable/ic_baseline_attach_money_24"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:boxBackgroundMode="outline"
+                    android:hint="Rented Amount Per Month"
+                    app:endIconMode="clear_text"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+                    <EditText
+                        android:inputType="number"
+                        android:id="@+id/rentedAmountId"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_marginTop="15dp"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_marginLeft="5dp"
+                android:text="Select What You Want to Rent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:weightSum="3"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_weight="2.2"
+                    android:id="@+id/desireRentTextInputLayoutId"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:boxBackgroundMode="outline"
+                    android:hint=" Example: Flat"
+                    app:endIconMode="dropdown_menu"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
+
+                    <AutoCompleteTextView
+                        android:id="@+id/desireRentTextId"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <LinearLayout
+                    android:weightSum="3"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight=".8"
+                    android:orientation="horizontal">
+
+                    <ImageButton
+                        android:id="@+id/incrementId"
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:background="@color/white"
+                        android:src="@drawable/ic_baseline_arrow_upward_24" />
+
+
+                    <TextView
+                        android:id="@+id/inDeTVId"
+                        android:textSize="17sp"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
+                        android:padding="1dp"
+                        android:gravity="center"
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="0" />
+
+                    <ImageButton
+                        android:id="@+id/decrementId"
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:background="@color/white"
+                        android:src="@drawable/ic_baseline_arrow_downward_24" />
+
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+
+
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
@@ -138,27 +282,6 @@
                 android:padding="50dp"
                 android:inputType="text"
                 android:id="@+id/detailsAddressId"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            app:startIconDrawable="@drawable/ic_baseline_attach_money_24"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:boxBackgroundMode="outline"
-            android:hint="Rented Amount Per Month"
-            app:counterEnabled="true"
-            app:counterMaxLength="5"
-            app:endIconMode="clear_text"
-            android:layout_margin="10dp"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-
-            <EditText
-                android:inputType="number"
-                android:id="@+id/rentedAmountId"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 />
@@ -395,17 +518,8 @@
 
         </com.google.android.material.chip.ChipGroup>
 
-        <TextView
-            android:layout_marginTop="15dp"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:layout_marginLeft="5dp"
-            android:text="Select What You Want to Rent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
 
-        <com.google.android.material.chip.ChipGroup
+        <!--<com.google.android.material.chip.ChipGroup
             android:id="@+id/rentTypeChipGroupId"
             app:singleSelection="true"
             android:padding="5dp"
@@ -448,7 +562,7 @@
                 android:layout_height="wrap_content"
                 android:text="More Than 2 Seat"/>
 
-        </com.google.android.material.chip.ChipGroup>
+        </com.google.android.material.chip.ChipGroup> -->
 
         <ImageView
             android:layout_gravity="center"
@@ -480,6 +594,6 @@
 
     </LinearLayout>
 
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
-</RelativeLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
