--- a/app/src/main/res/drawable/edit_text_border.xml
+++ b/app/src/main/res/drawable/edit_text_border.xml
@@ -4,7 +4,7 @@
 
     <stroke
         android:width="3dp"
-        android:color="@color/colorPrimaryDark"
+        android:color="@color/editTextBorderColor"
         />
 
     <corners
