--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -12,8 +12,9 @@
         android:layout_height="wrap_content">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/toolbarLayoutId"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:contentScrim="@color/white"
+            app:contentScrim="#F8F8F8"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
