--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -28,10 +28,10 @@
 
             <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/editableProfileImageViewId"
-                android:layout_centerVertical="true"
                 android:layout_width="130dp"
                 android:layout_height="130dp"
-                android:src="@drawable/profile"
+                android:layout_centerVertical="true"
+                android:src="@drawable/splashicon"
                 app:civ_border_color="#FFFFFF"
                 app:civ_border_width="2dp" />
 
